# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  20 Nov 2004; Brian Harring <ferringb@gentoo.org> <collection-of-files>:
  Portage is now autotool'd, w/ relevant configure.  Needs work, specifically,
  cnf installation isn't there yet- would prefer to add that when the 101 arch 
  specific make.conf's are collapsed down to one file.

  18 Nov 2004; Marius Mauch <genone@gentoo.org> pym/portage_versions.py:
  Fixing version regexp to allow weird package names.

  15 Nov 2004; Marius Mauch <genone@gentoo.org> bin/ebuild-default-functions.sh:
  NEVER try to change permissions on symlinks, stupid chmod will change the
  referenced files instead (fixed the portage uid/gid checks in dyn_install)

  15 Nov 2004; Nicholas Jones <carpaski@gentoo.org> portage.py, portage_gpg.py:
  Fixes for the gso changes in gpg. Removed the 'virtuals' file handling
  which caused an empty file to be recreated. Added XXX marks on potentially
  bad calls.

  14 Nov 2004; Brian Harring <ferringb@gentoo.org> spec/emerge.syntax:
  Bye bye emerge.syntax, we hardly knew ye.

  14 Nov 2004; Marius Mauch <genone@gentoo.org> bin/emerge, man/make.conf.5,
  spec/emerge.syntax, cnf/make.conf.*, cnf/make.globals*:
  removing all support for AUTOCLEAN=no, it's breaking too many things these
  days and has no real use anyway.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/dcache.py:
  Updated to make it more memory efficient- slots based, uses weakref
  to handle symlink'd dirs.  Still a bit slower, but it's also stat'ing
  all directories upto the target directory.  That can probably be removed.
  Note, there is a bug in it currently- invalidate isn't a valid node method.